crates/nash-can/tests/snapshots/kinds__const_parameter_conflicts_with_a_big_field.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Box ('a : Const) = Box 'a\n"
info: diagnostic
---
nash::names::contradictory_representation

  × The representation requirements on 'a are incompatible:
   ╭─[src/Main.nash:6:11]
 5 │ 
 6 │ type Box ('a : Const) = Box 'a
   ·           ──
   ╰────
  help: Change the incompatible constraints or uses of this variable.
