crates/nash-can/tests/snapshots/kinds__fragment_restriction_cannot_validate_an_impl_head.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type tag 'a = Tag\ntype option 'a = Some 'a\ntype app 'f 'a = App ('f 'a)\ntype wrap 'f 'g 'a = Wrap ('f ('g 'a))\ntrait Marker 'a where\n    marker : 'a -> unit\nimpl Marker (wrap (app tag) app option) where\n    marker x = ()"
---
[
    KindRestricted {
        region: Region {
            start: Position {
                line: 11,
                column: 14,
            },
            end: Position {
                line: 11,
                column: 39,
            },
        },
        context: ImplHead {
            trait_: QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Main",
                },
                name: "Marker",
            },
            index: 0,
        },
        reason: "a generated constructor capture is not an input atom",
    },
]
