crates/nash-can/tests/snapshots/kinds__fresh_parameter_replay_in_annotations.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'f 'a))\nidentity : s s s tag -> s s s tag\nidentity value = value"
---
[
    KindInfinite {
        region: Region {
            start: Position {
                line: 6,
                column: 29,
            },
            end: Position {
                line: 6,
                column: 31,
            },
        },
        context: LittleField {
            union: "s",
            ctor: "S",
            index: 0,
        },
    },
]
