crates/nash-can/tests/snapshots/kinds__fresh_parameter_replay_in_declarations.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'f 'a))\ntype w = W (s s s)\ntype alias Count = int"
---
[
    KindMismatch {
        region: Region {
            start: Position {
                line: 7,
                column: 13,
            },
            end: Position {
                line: 7,
                column: 18,
            },
        },
        context: LittleField {
            union: "w",
            ctor: "W",
            index: 0,
        },
        expected: KindScheme {
            bounds: [
                KindSet(
                    7,
                ),
            ],
            kind: Var(
                0,
            ),
            applications: [],
        },
        actual: KindScheme {
            bounds: [],
            kind: Constructor {
                scheme: KindScheme {
                    bounds: [
                        KindSet(
                            8,
                        ),
                        KindSet(
                            8,
                        ),
                        KindSet(
                            15,
                        ),
                        KindSet(
                            15,
                        ),
                        KindSet(
                            7,
                        ),
                    ],
                    kind: Arrow(
                        Var(
                            0,
                        ),
                        Arrow(
                            Var(
                                1,
                            ),
                            Arrow(
                                Var(
                                    2,
                                ),
                                Base(
                                    Term,
                                ),
                            ),
                        ),
                    ),
                    applications: [
                        KindApplication {
                            head: Var(
                                0,
                            ),
                            arguments: [
                                Var(
                                    0,
                                ),
                                Var(
                                    2,
                                ),
                            ],
                            result: Var(
                                3,
                            ),
                        },
                        KindApplication {
                            head: Var(
                                1,
                            ),
                            arguments: [
                                Var(
                                    3,
                                ),
                            ],
                            result: Var(
                                4,
                            ),
                        },
                    ],
                },
                arguments: [
                    Constructor {
                        scheme: KindScheme {
                            bounds: [
                                KindSet(
                                    8,
                                ),
                                KindSet(
                                    8,
                                ),
                                KindSet(
                                    15,
                                ),
                                KindSet(
                                    15,
                                ),
                                KindSet(
                                    7,
                                ),
                            ],
                            kind: Arrow(
                                Var(
                                    0,
                                ),
                                Arrow(
                                    Var(
                                        1,
                                    ),
                                    Arrow(
                                        Var(
                                            2,
                                        ),
                                        Base(
                                            Term,
                                        ),
                                    ),
                                ),
                            ),
                            applications: [
                                KindApplication {
                                    head: Var(
                                        0,
                                    ),
                                    arguments: [
                                        Var(
                                            0,
                                        ),
                                        Var(
                                            2,
                                        ),
                                    ],
                                    result: Var(
                                        3,
                                    ),
                                },
                                KindApplication {
                                    head: Var(
                                        1,
                                    ),
                                    arguments: [
                                        Var(
                                            3,
                                        ),
                                    ],
                                    result: Var(
                                        4,
                                    ),
                                },
                            ],
                        },
                        arguments: [],
                    },
                    Constructor {
                        scheme: KindScheme {
                            bounds: [
                                KindSet(
                                    8,
                                ),
                                KindSet(
                                    8,
                                ),
                                KindSet(
                                    15,
                                ),
                                KindSet(
                                    15,
                                ),
                                KindSet(
                                    7,
                                ),
                            ],
                            kind: Arrow(
                                Var(
                                    0,
                                ),
                                Arrow(
                                    Var(
                                        1,
                                    ),
                                    Arrow(
                                        Var(
                                            2,
                                        ),
                                        Base(
                                            Term,
                                        ),
                                    ),
                                ),
                            ),
                            applications: [
                                KindApplication {
                                    head: Var(
                                        0,
                                    ),
                                    arguments: [
                                        Var(
                                            0,
                                        ),
                                        Var(
                                            2,
                                        ),
                                    ],
                                    result: Var(
                                        3,
                                    ),
                                },
                                KindApplication {
                                    head: Var(
                                        1,
                                    ),
                                    arguments: [
                                        Var(
                                            3,
                                        ),
                                    ],
                                    result: Var(
                                        4,
                                    ),
                                },
                            ],
                        },
                        arguments: [],
                    },
                ],
            },
            applications: [],
        },
    },
    KindMismatch {
        region: Region {
            start: Position {
                line: 8,
                column: 20,
            },
            end: Position {
                line: 8,
                column: 23,
            },
        },
        context: AliasCasing {
            alias: "Count",
            big: true,
        },
        expected: KindScheme {
            bounds: [],
            kind: Base(
                Big,
            ),
            applications: [],
        },
        actual: KindScheme {
            bounds: [],
            kind: Base(
                Const,
            ),
            applications: [],
        },
    },
]
